--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -1,1 +1,20 @@
-// plik z gridem oraz domyślnymi klasami pomocniczymi dla niego,
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: $main-font;
+}
+
+body {
+  background-color: $background-basic-color;
+}
+
+.row {
+  border: 1px solid black; //TODO do usunięcia 
+}
+
+#wrapper {
+  border: 1px solid yellow; //TODO do usunięcia 
+}
