--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -11,10 +11,6 @@ body {
   background-color: $background-basic-color;
 }
 
-.row {
-  border: 1px solid black; //TODO do usunięcia 
-}
-
 #wrapper {
-  border: 1px solid yellow; //TODO do usunięcia 
+  padding: 0 10px;
 }
