--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,10 +1,13 @@
-#page-conntent-wrapper{
-  width: 100%;
-  // position: absolute;
-  padding: 15px;
-  border: 5px solid green;
+#page-conntent-wrapper {
+  padding-top: 75px;
+
 }
 
-#wrapper.menuDisplayed #page-conntent-wrapper{
+.container-fluid {
+  background: white;
+  margin-bottom: 5px;
+}
+
+#wrapper.menuDisplayed #page-conntent-wrapper {
   padding-left: 250px;
 }
