--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -1,14 +1,10 @@
-// sidebar
 #sidebar-wrapper {
-  // padding-top: 70px;
   z-index: 1;
   background-color: $sidebar-background-color;
-  position: absolute;
+  position: fixed;
   width: 0;
   height: 100vh;
   overflow-y: hidden;
-  border: 2px solid red;
-  opacity: 0.9;
   left: 0;
   transition: transform .3s .3s ease-in-out;
   -webkit-transition: transform .3s .3s ease-in-out;
@@ -22,21 +18,38 @@
 }
 
 .sidebar-nav {
-  padding: 0;
-  list-style: none;
+  padding-left: 20px;
 }
 
-.sidebar-nav li {
-  text-indent: 20px;
-  line-height: 50px;
-}
-
-.sidebar-nav li a {
-  display: inline-block;
+.sidebar-nav a {
+  line-height: 70px;
+  display: block;
+  width: 100%;
   text-decoration: none;
   color: white;
 }
 
-.sidebar-nav li a:hover {
-  background: blue;
+.sidebar-nav a:hover {
+  background: $sidebar-background-color1;
+  border-left: 5px solid $buttons-color;
+}
+.sidebar-nav img{
+  margin: 0 5px;
+}
+
+.photo {
+  // display: flex;
+  // flex-direction: column;
+
+  color: $sidebar-font-color;
+}
+
+.photo__manager {
+  width: 100px;
+  height: 100px;
+  border-radius: 100%;
+}
+
+.photo p {
+  display: inline;
 }
