--- a/src/sass/sections/_topbar.scss
+++ b/src/sass/sections/_topbar.scss
@@ -1,8 +1,7 @@
 #topbar-wrapper {
   width: 100%;
-  // position: absolute;
-  padding: 15px;
-  border: 5px solid green;
+  position: fixed;
+  padding-top: 3px;
 }
 
 #wrapper.menuDisplayed #topbar-wrapper {
@@ -10,20 +9,26 @@
 }
 
 .topbar-nav {
-  padding: 0;
-  list-style: none;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: baseline;
+  overflow-x: hidden;
 }
 
-.topbar-nav li {
-  text-indent: 20px;
-  line-height: 50px;
-}
-
-.topbar-nav li a {
-  display: inline-block;
+.topbar-nav a {
+  background-color: $sidebar-font-color;
   text-decoration: none;
+  // margin-left: 2px;
+  padding: 6px 10px;
+  border-left: 2px solid $background-basic-color;
+}
+.topbar-nav img{
+  margin: 0 5px;
 }
 
-.topbar-nav li a:hover {
+
+.topbar-nav a:hover {
   background: blue;
 }
