--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,11 +5,14 @@
 
 /* Components */
 @import "components/hamburger_button";
+@import "components/butons";
 @import "components/icon";
+@import "components/section_headers";
 
 /* Sections */
 @import "sections/sidebar";
 @import "sections/mainconntent";
 @import "sections/topbar";
+@import "sections/links";
 
 // /* Pages / Views */
