--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -33,14 +33,14 @@
   background: $sidebar-background-color1;
   border-left: 5px solid $buttons-color;
 }
-.sidebar-nav img{
+
+.sidebar-nav img {
   margin: 0 5px;
 }
 
 .photo {
   // display: flex;
   // flex-direction: column;
-
   color: $sidebar-font-color;
 }
 
@@ -48,6 +48,10 @@
   width: 100px;
   height: 100px;
   border-radius: 100%;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -ms-border-radius: 100%;
+  -o-border-radius: 100%;
 }
 
 .photo p {
