--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -14,5 +14,6 @@
 @import "sections/mainconntent";
 @import "sections/topbar";
 @import "sections/links";
+@import "sections/general_statistic";
 
 // /* Pages / Views */
