--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -4,11 +4,15 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: $main-font;
+  color: $font-color;
+
 }
 
 body {
   background-color: $background-basic-color;
+  font-family:  $paragraph-font;
+  font-size: $paragraph-font-size;
+
 }
 
 #wrapper {
