--- a/src/sass/components/_butons.scss
+++ b/src/sass/components/_butons.scss
@@ -1,30 +1,32 @@
-.button__orange {
+@mixin button {
   background-color: $buttons-color;
   border: none;
-  height: 40px;
-  width: 120px;
+  height: 35px;
   color: $sidebar-font-color;
   border-radius: 4%;
-  -webkit-border-radius: 4%;
-  -moz-border-radius: 4%;
-  -ms-border-radius: 4%;
-  -o-border-radius: 4%;
   display: flex;
   align-items: center;
   justify-content: center;
+
+}
+
+.button__orange {
+  @include button;
+  width: 120px;
 }
 
 .button__orange:hover {
   cursor: pointer;
   opacity: 0.85;
-
 }
 
-.button__orange:active {
-  background-color: #fa5300;
-  // outline: none;
+.button__refresh {
+  @include button;
+  margin-left: 2px;
+  min-width: 40px;
 }
 
-.button__orange:focus {
-  outline: none;
+.button__refresh:hover {
+  cursor: pointer;
+  opacity: 0.85;
 }
