--- a/src/sass/components/_hamburger_button.scss
+++ b/src/sass/components/_hamburger_button.scss
@@ -1,18 +1,18 @@
 @mixin hamburger-line {
   width: 100%;
   height: 3px;
-  background-color: white;
+  background-color: $font-color;
   position: absolute;
-  background-color: $sidebar-background-color;
 }
 
 .hamburger {
+  outline-style: none;
   padding: 10px;
   cursor: pointer;
   background-color: transparent;
   border: 0;
   margin: 0;
-  position: absolute;
+  position: fixed;
   z-index: 2;
 
   &__box {
@@ -64,7 +64,7 @@
 }
 
 .hamburger--active .hamburger__inner::before {
-  background-color: white;
+  background-color: $font-color;
   transform: translateY(10px) rotate(45deg);
   -webkit-transform: translateY(10px) rotate(45deg);
   -moz-transform: translateY(10px) rotate(45deg);
@@ -73,7 +73,7 @@
 }
 
 .hamburger--active .hamburger__inner::after {
-  background-color: white;
+  background-color: $font-color;
   transform: translateY(-10px) rotate(-45deg);
   -webkit-transform: translateY(-10px) rotate(-45deg);
   -moz-transform: translateY(-10px) rotate(-45deg);
@@ -88,7 +88,7 @@
   -moz-transition: transform .3s .3s ease-in-out;
   -ms-transition: transform .3s .3s ease-in-out;
   -o-transition: transform .3s .3s ease-in-out;
-  -webkit-transform: translateX(180px);
+  -webkit-transform: translateX(140px);
   -moz-transform: translateX(180px);
   -ms-transform: translateX(180px);
   -o-transform: translateX(180px);
