--- a/src/sass/sections/_links.scss
+++ b/src/sass/sections/_links.scss
@@ -1,6 +1,6 @@
 .links {
   &__wrapper {
-    padding-top: 20px;
+    padding: 20px 20%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -9,14 +9,19 @@
 
   .link {
     height: 70px;
-    width: 700px;
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid $background-basic-color;
 
     a {
+      flex: 1;
       text-decoration: none;
+    }
+
+    h3 {
+      flex: 1;
     }
   }
 
