--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,13 +1,14 @@
 #page-conntent-wrapper {
-  padding-top: 75px;
+  position: absolute;
+  padding-top: 43px;
 }
 
 .container-fluid {
-  background: white;
+  background: $icon-color;
   margin-bottom: 5px;
 }
 
 #wrapper.menuDisplayed #page-conntent-wrapper {
-  padding-left: 250px;
+  padding-left: 200px;
 }
 
