--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -1,4 +1,5 @@
 #sidebar-wrapper {
+
   z-index: 1;
   background-color: $sidebar-background-color;
   position: fixed;
@@ -7,14 +8,11 @@
   overflow-y: hidden;
   left: 0;
   transition: transform .3s .3s ease-in-out;
-  -webkit-transition: transform .3s .3s ease-in-out;
-  -moz-transition: transform .3s .3s ease-in-out;
-  -ms-transition: transform .3s .3s ease-in-out;
-  -o-transition: transform .3s .3s ease-in-out;
+
 }
 
 #wrapper.menuDisplayed #sidebar-wrapper {
-  width: 250px;
+  width: 200px;
 }
 
 .sidebar-nav {
@@ -22,38 +20,64 @@
 }
 
 .sidebar-nav a {
-  line-height: 70px;
+  line-height: 5;
   display: block;
   width: 100%;
   text-decoration: none;
-  color: white;
 }
 
 .sidebar-nav a:hover {
   background: $sidebar-background-color1;
   border-left: 5px solid $buttons-color;
+  color: $sidebar-font-color;
 }
 
 .sidebar-nav img {
   margin: 0 5px;
 }
 
-.photo {
-  // display: flex;
-  // flex-direction: column;
-  color: $sidebar-font-color;
+#manager_box {
+  margin: 20px auto;
 }
 
+.photo {
+  position: relative;
+  margin: 20px auto;
+  display: flex;
+  align-items: center;
+  color: $sidebar-font-color;
+  font-style: italic;
+
+  p {
+    color: rgb(73, 95, 197);
+  }
+}
+
+
 .photo__manager {
-  width: 100px;
-  height: 100px;
+  width: 30px;
+  height: 30px;
   border-radius: 100%;
+  float: left;
   -webkit-border-radius: 100%;
   -moz-border-radius: 100%;
   -ms-border-radius: 100%;
   -o-border-radius: 100%;
 }
 
-.photo p {
-  display: inline;
+
+div.photo::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: $brand-3-color;
+  position: absolute;
+  left: 15%;
+  top: 8%;
+  z-index: 100;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
 }
