--- a/src/sass/sections/_topbar.scss
+++ b/src/sass/sections/_topbar.scss
@@ -1,20 +1,36 @@
 #topbar-wrapper {
-  width: 100%;
+  width: 98%;
   position: fixed;
-  padding-top: 3px;
+  padding-top: 1px;
 }
 
 #wrapper.menuDisplayed #topbar-wrapper {
-  padding-left: 250px;
+  padding-left: 200px;
 }
 
 .topbar-nav {
   height: 100%;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   justify-content: flex-end;
   align-items: baseline;
   overflow-x: hidden;
+
+  #kropka {
+    position: relative;
+  }
+
+  a#kropka::after {
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    background: $brand-3-color;
+    position: absolute;
+    left: 55%;
+    z-index: 100;
+  }
 }
 
 .topbar-nav a {
