some improvments at topbars

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -15,11 +15,8 @@ $background-basic-color: #ebebeb;
 $paragraph-font-size:10px;
 
 /* Fonts */
-$brand-font: "Open Sans",Helvetica,Arial, Serif;
-$paragraph-font: "Open Sans",Helvetica,Arial, Sans-Serif;
+$brand-font: "Open Sans",Helvetica,Arial;
+$paragraph-font: "Open Sans",Helvetica;
 
-$main-font: 'Playfair Display', Serif;
-$header-font: 'Source Sans Pro', Sans-Serif;
-
-$main-font: 'Playfair Display', Serif;
-$header-font: 'Source Sans Pro', Sans-Serif;
+$main-font: 'Playfair Display',Serif;
+$header-font: 'Source Sans Pro',Sans-Serif;
