--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -3,9 +3,9 @@
 /* Colors */
 $sidebar-background-color: #000000;
 $sidebar-background-color1: #020007;
-$buttons-color: #ff742e;
-$brand-2-color: #5ac6da;
-$brand-3-color: #279b4d;
+$buttons-color: #FF9A38;
+$brand-2-color: #80BFCA;
+$brand-3-color: #279B4D;
 $font-color: #8c8f8d;
 $icon-color: #f8f9fa;
 $sidebar-font-color: #ffffff;
