--- a/src/sass/sections/_links.scss
+++ b/src/sass/sections/_links.scss
@@ -1,19 +1,24 @@
 .links {
+  background: $icon-color;
+  margin-top: 5px;
+
   &__wrapper {
-    padding: 20px 20%;
+    padding: 20px 10%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    background: $icon-color;
   }
 
-  .link {
-    height: 70px;
+  .link_wrapper {
+    padding: 5%;
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
     border-bottom: 1px solid $background-basic-color;
+   
 
     a {
       flex: 1;
@@ -40,7 +45,7 @@
     }
   }
 
-  .link:hover {
+  .link_wrapper:hover {
     background-color: $background-basic-color;
 
     .links__icon {
