--- a/src/sass/sections/_sidebar.scss
+++ b/src/sass/sections/_sidebar.scss
@@ -1,27 +1,49 @@
 #sidebar-wrapper {
-
   z-index: 1;
   background-color: $sidebar-background-color;
   position: fixed;
-  width: 0;
+  width: 200px;
   height: 100vh;
   overflow-y: hidden;
   left: 0;
-  transition: transform .3s .3s ease-in-out;
-
+  transition: transform .5s .5s ease-in-out;
+  -webkit-transition: transform .5s .5s ease-in-out;
+  -moz-transition: transform .5s .5s ease-in-out;
+  -ms-transition: transform .5s .5s ease-in-out;
+  -o-transition: transform .5s .5s ease-in-out;
 }
 
 #wrapper.menuDisplayed #sidebar-wrapper {
-  width: 200px;
+  width: 35px;
+  overflow: hidden;
+
+  a {
+    display: inline-block;
+    padding: 5px;
+  }
+
+  a:first-child {
+    margin-top: 20px;
+  }
+
+  a span {
+    display: none;
+  }
+
+  #manager_box {
+    display: none;
+  }
 }
 
 .sidebar-nav {
-  padding-left: 20px;
+  padding-left: 5px;
 }
+
 
 .sidebar-nav a {
   line-height: 5;
-  display: block;
+  display: flex;
+  align-items: center;
   width: 100%;
   text-decoration: none;
 }
@@ -33,7 +55,7 @@
 }
 
 .sidebar-nav img {
-  margin: 0 5px;
+  margin-right: 20px;
 }
 
 #manager_box {
@@ -53,7 +75,6 @@
   }
 }
 
-
 .photo__manager {
   width: 30px;
   height: 30px;
@@ -63,6 +84,7 @@
   -moz-border-radius: 100%;
   -ms-border-radius: 100%;
   -o-border-radius: 100%;
+  object-fit: cover;
 }
 
 
