--- a/src/sass/sections/_topbar.scss
+++ b/src/sass/sections/_topbar.scss
@@ -1,50 +1,38 @@
 #topbar-wrapper {
-  width: 98%;
-  position: fixed;
-  padding-top: 1px;
-}
-
-#wrapper.menuDisplayed #topbar-wrapper {
-  padding-left: 200px;
-}
-
-.topbar-nav {
-  height: 100%;
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
   justify-content: flex-end;
-  align-items: baseline;
-  overflow-x: hidden;
-
-  #kropka {
-    position: relative;
-  }
-
-  a#kropka::after {
-    content: "";
-    width: 10px;
-    height: 10px;
-    border-radius: 50%;
-    background: $brand-3-color;
-    position: absolute;
-    left: 55%;
-    z-index: 100;
-  }
-}
-
-.topbar-nav a {
+  align-items: center;
+  height: 35px;
+  position: fixed;
+  left: -20px;
+  width: 100vw;
   background-color: $sidebar-font-color;
-  text-decoration: none;
-  // margin-left: 2px;
-  padding: 6px 10px;
-  border-left: 2px solid $background-basic-color;
+
+  a {
+    // border: 1px solid $font-color;
+    height: 35px;
+    text-decoration: none;
+    margin-left: 3px;
+    padding: 6px 10px;
+    border-left: 2px solid $background-basic-color;
+  }
 }
 
-.topbar-nav img {
-  margin: 0 5px;
-}
-
-.topbar-nav a:hover {
+a:hover {
   background-color: $background-basic-color;
+}
+
+#kropka {
+  position: relative;
+}
+
+a#kropka::after {
+  content: "";
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: $brand-3-color;
+  position: absolute;
+  left: 55%;
+  z-index: 100;
 }
