--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,9 +1,16 @@
 #page-content-wrapper {
   padding-top: 43px;
-  padding-left: 200px; //TODO displayd 
+  padding-left: 200px;
+}
+
+#page-content-wrapper>* {
+  display: none;
+}
+
+#page-content-wrapper>.active {
+  display: block;
 }
 
 #wrapper.menuDisplayed #page-content-wrapper {
   padding-left: 35px;
 }
-
