--- a/src/sass/components/_section_headers.scss
+++ b/src/sass/components/_section_headers.scss
@@ -1,5 +1,6 @@
 .section_header {
   height: 50px;
+  background: $sidebar-font-color;
   border-bottom: 1px solid $background-basic-color;
   display: flex;
   align-items: center;
