--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,5 +15,7 @@
 @import "sections/topbar";
 @import "sections/links";
 @import "sections/general_statistic";
+@import "sections/banners";
+@import "sections/personal_data";
 
 // /* Pages / Views */
