--- a/src/sass/sections/_general_statistic.scss
+++ b/src/sass/sections/_general_statistic.scss
@@ -1,12 +1,12 @@
 .general_statistic {
   background: $icon-color;
   padding-bottom: 20px;
+  background: $sidebar-font-color;
 
   .dates_form_wrraper {
 
     padding: 20px 20%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
 
     input[type=date][id=select] {
@@ -19,6 +19,11 @@
       &::-webkit-calendar-picker-indicator {
         background-image: url(../../images/icons/calendar.svg);
       }
+    }
+
+    @include mobile {
+      flex-direction: column;
+      align-items: center;
     }
   }
 }
@@ -35,6 +40,10 @@
     justify-content: space-between;
     border-bottom: 1px solid $background-basic-color;
     padding: 10px;
+  }
+
+  @include mobile {
+    flex-direction: column;
   }
 }
 
