--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,6 +1,11 @@
 #page-content-wrapper {
   padding-top: 43px;
   padding-left: 200px;
+
+  @include mobile {
+    padding-top: 5px;
+    padding-left: 130px;
+  }
 }
 
 #page-content-wrapper>* {
