--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -17,5 +17,6 @@
 @import "sections/general_statistic";
 @import "sections/banners";
 @import "sections/personal_data";
+@import "sections/details";
 
 // /* Pages / Views */
