--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -8,6 +8,7 @@
 @import "components/butons";
 @import "components/icon";
 @import "components/section_headers";
+@import "components/input_date";
 
 /* Sections */
 @import "sections/sidebar";
@@ -18,5 +19,3 @@
 @import "sections/banners";
 @import "sections/personal_data";
 @import "sections/details";
-
-// /* Pages / Views */
