--- a/src/sass/_layout.scss
+++ b/src/sass/_layout.scss
@@ -9,7 +9,7 @@
 body {
   background-color: $background-basic-color;
   font-family: $paragraph-font;
-  font-size: $paragraph-font-size;
+  font-size: $font-size;
   color: $font-color;
 }
 
