--- a/src/sass/sections/_general_statistic.scss
+++ b/src/sass/sections/_general_statistic.scss
@@ -9,17 +9,17 @@
     display: flex;
     justify-content: center;
 
-    input[type=date][class=select] {
+    input {
+      border-style: none;
+      border: 1px solid $background-basic-color;
+    }
+
+    input[type=date][class=date_picker] {
       &::-webkit-calendar-picker-indicator {
         display: none;
       }
     }
 
-    input[type=date][class=pick] {
-      &::-webkit-calendar-picker-indicator {
-        background-image: url(../../images/icons/calendar.svg);
-      }
-    }
 
     @include mobile {
       flex-direction: column;
@@ -47,38 +47,6 @@
   }
 }
 
-.chart_statistic_wrapper {
-  .circle_wrapper {
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 30%;
-
-    .description_1 {
-      @include description($background-basic-color);
-    }
-
-    .description_2 {
-      @include description($background-basic-color);
-    }
-
-    .description_3 {
-      @include description($background-basic-color);
-    }
-
-    .circle_1 {
-      @include circle($brand-2-color);
-    }
-
-    .circle_2 {
-      @include circle($buttons-color);
-    }
-
-    .circle_3 {
-      @include circle($brand-3-color);
-    }
-  }
-}
-
 .chart_wrapper {
   display: flex;
 
@@ -86,3 +54,5 @@
     width: 100%;
   }
 }
+
+
