--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,6 +1,11 @@
 #page-content-wrapper {
   padding-top: 43px;
   padding-left: 200px;
+  transition: .2s .2s ease-in-out;
+  -webkit-transition: .2s .2s ease-in-out;
+  -moz-transition: .2s .2s ease-in-out;
+  -ms-transition: .2s .2s ease-in-out;
+  -o-transition: .2s .2s ease-in-out;
 
   @include mobile {
     padding-top: 5px;
