--- a/src/sass/sections/_topbar.scss
+++ b/src/sass/sections/_topbar.scss
@@ -9,12 +9,15 @@
   background-color: $sidebar-font-color;
 
   a {
-    // border: 1px solid $font-color;
     height: 35px;
     text-decoration: none;
-    margin-left: 3px;
-    padding: 6px 10px;
+    padding: 10px 15px;
     border-left: 2px solid $background-basic-color;
+    transition: all 2s;
+    -webkit-transition: all 2s;
+    -moz-transition: all 2s;
+    -ms-transition: all 2s;
+    -o-transition: all 2s;
   }
 
   @include mobile {
@@ -25,23 +28,29 @@
 
 a:hover {
   background-color: $background-basic-color;
+  border: none;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 
   i {
     color: $buttons-color;
   }
 }
 
-#kropka {
+#dot {
   position: relative;
 }
 
-a#kropka::after {
+a#dot::after {
   content: "";
-  width: 10px;
-  height: 10px;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
   background: $brand-3-color;
   position: absolute;
-  left: 18px;
+  left: 22px;
   z-index: 100;
 }
