--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -448,6 +448,11 @@ a {
   margin: 0;
   position: fixed;
   z-index: 2;
+  transition: .2s .2s ease-in-out;
+  -webkit-transition: .2s .2s ease-in-out;
+  -moz-transition: .2s .2s ease-in-out;
+  -ms-transition: .2s .2s ease-in-out;
+  -o-transition: .2s .2s ease-in-out;
 }
 
 @media (max-width: 767px) {
@@ -463,6 +468,14 @@ a {
   position: relative;
 }
 
+.hamburger__box:hover {
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+}
+
 .hamburger__inner {
   width: 100%;
   height: 3px;
@@ -470,16 +483,6 @@ a {
   position: absolute;
   left: 0;
   top: 50%;
-  transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  -o-transform: translateY(-50%);
-  transition: background-color .1s .1s ease-in-out;
-  -webkit-transition: background-color .1s .1s ease-in-out;
-  -moz-transition: background-color .1s .1s ease-in-out;
-  -ms-transition: background-color .1s .1s ease-in-out;
-  -o-transition: background-color .1s .1s ease-in-out;
 }
 
 .hamburger__inner::before,
@@ -490,11 +493,6 @@ a {
   position: absolute;
   content: '';
   left: 0;
-  transition: background-colo1r .2s .2s ease-in-out;
-  -webkit-transition: background-colo1r .2s .2s ease-in-out;
-  -moz-transition: background-colo1r .2s .2s ease-in-out;
-  -ms-transition: background-colo1r .2s .2s ease-in-out;
-  -o-transition: background-colo1r .2s .2s ease-in-out;
 }
 
 .hamburger__inner::before {
@@ -515,15 +513,11 @@ a {
 
 .hamburger--active {
   transform: translateX(-155px);
-}
-
-@media (max-width: 767px) {
-  .hamburger--active {
-    -webkit-transform: translateX(-155px);
-    -moz-transform: translateX(-155px);
-    -ms-transform: translateX(-155px);
-    -o-transform: translateX(-155px);
-  }
+  transition: .2s .2s ease-in-out;
+  -webkit-transition: .2s .2s ease-in-out;
+  -moz-transition: .2s .2s ease-in-out;
+  -ms-transition: .2s .2s ease-in-out;
+  -o-transition: .2s .2s ease-in-out;
 }
 
 @media (max-width: 767px) {
@@ -608,7 +602,7 @@ a {
 }
 
 input[type=date][class=date_choice]::-webkit-calendar-picker-indicator {
-  background-image: url(../../images/icons/calendar.svg);
+  background-image: url(../../vendor/icons/calendar.svg);
 }
 
 /* Sections */
@@ -620,11 +614,11 @@ input[type=date][class=date_choice]::-webkit-calendar-picker-indicator {
   height: 100vh;
   overflow-y: hidden;
   left: 0;
-  transition: transform .5s .5s ease-in-out;
-  -webkit-transition: transform .5s .5s ease-in-out;
-  -moz-transition: transform .5s .5s ease-in-out;
-  -ms-transition: transform .5s .5s ease-in-out;
-  -o-transition: transform .5s .5s ease-in-out;
+  transition: .2s .2s ease-in-out;
+  -webkit-transition: .2s .2s ease-in-out;
+  -moz-transition: .2s .2s ease-in-out;
+  -ms-transition: .2s .2s ease-in-out;
+  -o-transition: .2s .2s ease-in-out;
 }
 
 #sidebar-wrapper .logo {
@@ -759,9 +753,34 @@ div.photo::after {
   -o-border-radius: 50%;
 }
 
+#sidebar-wrapper a.icon-notification {
+  position: relative;
+}
+
+#sidebar-wrapper a.icon-notification:after {
+  content: "";
+  width: 7px;
+  height: 7px;
+  border-radius: 50%;
+  background: #279B4D;
+  position: absolute;
+  left: 7px;
+  top: 11px;
+  z-index: 100;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+}
+
 #page-content-wrapper {
   padding-top: 43px;
   padding-left: 200px;
+  transition: .2s .2s ease-in-out;
+  -webkit-transition: .2s .2s ease-in-out;
+  -moz-transition: .2s .2s ease-in-out;
+  -ms-transition: .2s .2s ease-in-out;
+  -o-transition: .2s .2s ease-in-out;
 }
 
 @media (max-width: 767px) {
@@ -800,9 +819,13 @@ div.photo::after {
 #topbar-wrapper a {
   height: 35px;
   text-decoration: none;
-  margin-left: 3px;
-  padding: 6px 10px;
+  padding: 10px 15px;
   border-left: 2px solid #ebebeb;
+  transition: all 2s;
+  -webkit-transition: all 2s;
+  -moz-transition: all 2s;
+  -ms-transition: all 2s;
+  -o-transition: all 2s;
 }
 
 @media (max-width: 767px) {
@@ -813,24 +836,30 @@ div.photo::after {
 
 a:hover {
   background-color: #ebebeb;
+  border: none;
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
 }
 
 a:hover i {
   color: #FF9A38;
 }
 
-#kropka {
+#dot {
   position: relative;
 }
 
-a#kropka::after {
+a#dot::after {
   content: "";
-  width: 10px;
-  height: 10px;
+  width: 7px;
+  height: 7px;
   border-radius: 50%;
   background: #279B4D;
   position: absolute;
-  left: 18px;
+  left: 22px;
   z-index: 100;
 }
 
