--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -602,7 +602,7 @@ a {
 }
 
 input[type=date][class=date_choice]::-webkit-calendar-picker-indicator {
-  background-image: url(../../vendor/icons/calendar.svg);
+  background-image: url(../vendor/icons/calendar.svg);
 }
 
 /* Sections */
