--- a/src/sass/components/_input_date.scss
+++ b/src/sass/components/_input_date.scss
@@ -1,5 +1,5 @@
 input[type=date][class=date_choice] {
   &::-webkit-calendar-picker-indicator {
-    background-image: url(../vendor/icons/calendar.svg);
+    background-image: url('../vendor/icons/calendar.svg');
   }
 }
