--- a/src/sass/components/_butons.scss
+++ b/src/sass/components/_butons.scss
@@ -1,39 +1,17 @@
 @mixin button {
-  background-color: $buttons-color;
   border: none;
-  height: 30px;
   color: $sidebar-font-color;
-  border-radius: 4%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  border-radius:4px;
+  padding: 3px;
 }
 
 .button__orange {
   @include button;
-  width: 120px;
-  margin: 0 2px;
+  background-color: $buttons-color;
 }
 
 .button__orange:hover {
   cursor: pointer;
   opacity: 0.85;
 
-}
-
-.button__refresh {
-  @include button;
-  margin-left: 2px;
-  min-width: 30px;
-  flex-basis: 1;
-  flex-shrink: 10;
-
-  @include mobile {
-    max-width: 10px;
-  }
-}
-
-.button__refresh:hover {
-  cursor: pointer;
-  opacity: 0.85;
 }
