--- a/src/sass/sections/_mainconntent.scss
+++ b/src/sass/sections/_mainconntent.scss
@@ -1,15 +1,15 @@
 #page-content-wrapper {
   padding-top: 43px;
-  padding-left: 200px;
+  padding-left: 150px;
   transition: .2s .2s ease-in-out;
   -webkit-transition: .2s .2s ease-in-out;
   -moz-transition: .2s .2s ease-in-out;
   -ms-transition: .2s .2s ease-in-out;
   -o-transition: .2s .2s ease-in-out;
 
-  @include mobile {
+  @include mobile{
+    padding-left: 35px;
     padding-top: 5px;
-    padding-left: 130px;
   }
 }
 
@@ -23,4 +23,8 @@
 
 #wrapper.menuDisplayed #page-content-wrapper {
   padding-left: 35px;
+  @include mobile{
+    padding-left: 150px;
+  }
 }
+
