--- a/src/sass/components/_section_headers.scss
+++ b/src/sass/components/_section_headers.scss
@@ -1,12 +1,14 @@
 .section_header {
-  height: 50px;
   background: $sidebar-font-color;
   border-bottom: 1px solid $background-basic-color;
   display: flex;
   align-items: center;
+  padding: 0 5px;
 
   h1 {
     text-transform: uppercase;
     color: $font-color;
+    font-size: 16px;
+    line-height: .7;
   }
 }
