--- a/src/sass/sections/_details.scss
+++ b/src/sass/sections/_details.scss
@@ -13,6 +13,10 @@
     display: flex;
     justify-content: center;
 
+    button {
+      margin: 0 5px;
+    }
+
     input {
       color: $font-color;
       border-style: none;
@@ -51,5 +55,9 @@
   tr:hover {
     background-color: #f5f5f5;
     cursor: pointer;
+  }
+
+  table {
+    border-collapse: collapse;
   }
 }
