--- a/src/sass/sections/_personal_data.scss
+++ b/src/sass/sections/_personal_data.scss
@@ -17,20 +17,30 @@
     }
   }
 
-  &_wrapper {
-    padding: 20px;
-    width: 100%;
+  button {
+    margin-top: 20px;
+  }
 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  &_wrapper {
+    width: 100%;
+    padding: 20px 20%;
     border-bottom: 1px solid $background-basic-color;
+    @include desktop {
+      padding: 20px 30%;
+    }
 
     .field {
       width: 100%;
       display: flex;
+      flex-wrap: wrap;
       justify-content: space-between;
-      padding: 10px 20%;
+      padding: 10px;
+
+      @include mobile {
+        padding: 10px 1px;
+      }
     }
+
+
   }
 }
